fix(chart): fix Flex box to 0 gap

--- a/packages/charts/src/theme/components/chart.css
+++ b/packages/charts/src/theme/components/chart.css
@@ -1,3 +1,7 @@
+[data-sl-chart] {
+  gap: 0px, 0px;
+}
+
 div[data-sl-chart="bar-stacked"] g text ~ path {
   transform: translate(0px, 1px);
 }
